--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,24 @@
-
-.navBar{
-    display: flex;
-    justify-content: center;
-    margin: 10px;
-    padding: 10px;
-    
+.overallPage{
+    /* border: 1px solid black; */
 }
 
-.navBarContent{
-    border: 1px solid black;
-    background-color: lightblue;
-    width: 800px;
-    height: 100px;
-    margin: 10px;
-    padding: 10px;
-    
-
+.navBar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    background-color: lightblue;
+}
+
+.navBarContent {
+    padding: 10px;
+}
+
+.navBarContent a {
+    margin: 10px;
+}
+
+.logoName {
+    padding: 10px;
 }
 
 #logo{
@@ -31,6 +31,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    border: 1px solid black;
 }
 
 #featPhoto{
