--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,94 @@
+@font-face {
+    font-family: 'Helserif';
+    src: url('fonts/Helserif-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Alliance';
+    src: url('fonts/AllianceNo1-Light.ttf') format('truetype');
+}
+
 .overallPage{
-    
+    background-color: #FFF8F0;
 }
 
 .navBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: lightblue;
+    background-color: #FFCF99;
     margin: 10px;
-
-    border: 1px solid black;
 }
 
 .navBarContent {
     padding: 10px;
+    display: flex;
 }
 
 .navBarContent a {
-    margin: 10px;
+    margin: 50px;
+    transition: color 0.3s;
+    text-decoration: none;
+
+    font-size: 30px;
+    font-family: 'Helserif';
+    color: #111D4A;
+    margin: 50px;
+
+    position: relative;
+
+}
+
+.navBarContent a:hover{
+    color: #92140c ;
+}
+
+
+
+.navBarContent a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background: #1E1E24 ;
+    transition: width 0.3s;
+}
+
+.navBarContent a:hover::after {
+    width: 100%;
 }
 
 .logoName {
-    padding: 10px;
+    padding: 0px;
 }
 
 #logo{
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
 }
+
+.bodyContent{}
 
 .featPhotoContents{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 
-    border: 1px solid black;
+    font-family: 'Helserif';
+    color: #111D4A;
+    font-size: 100px;
+    font-weight: bold;
 
     margin: 10px;
 }
 
-#featPhoto{
-    width: 800px;
-    height: 800px;
+.featPhoto{
+    width: 400px;
+    height: 400px;
+    border-radius: 60%;
 }
 
 .prevProj{
@@ -51,10 +97,15 @@
     align-items: center;
     flex-direction: column;
 
-    border: 1px solid black;
-
     margin: 10px;
     /* padding: 10px; */
+}
+
+.bodyTitles{
+    font-family: 'Helserif';
+    color: #111D4A;
+    font-size: 50px;
+    font-weight: lighter;
 }
 
 .prevProjPhotos{
@@ -78,7 +129,6 @@
 
     margin: 10px;
 
-    border: 1px solid black;
 }
 
 .skills{
@@ -117,8 +167,17 @@
     flex-direction: column;
 }
 
-p{
-    margin: 0px;
+.footer{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    flex-direction: row;
+
+    margin: 10px;
+
 }
 
 
+p{
+    margin: 0px;
+}
