--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,19 @@
 }
 
 .overallPage{
-    background-color: #FFF8F0;
+    background-color: #FFF8F0
 }
 
-.navBar {
+#navBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #FFCF99;
-    margin: 10px;
+    /* position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000; */
+    /* margin: 10px; */
 }
 
 .navBarContent {
@@ -69,9 +73,11 @@
     height: 140px;
 }
 
-.bodyContent{}
+.bodyContent{
+    
+}
 
-.featPhotoContents{
+#featPhotoContents{
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -91,7 +97,7 @@
     border-radius: 60%;
 }
 
-.prevProj{
+#prevProj{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,10 +114,19 @@
     font-weight: lighter;
 }
 
-.prevProjPhotos{
+.projContRight{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    align-self: flex-end;
+    flex-direction: column;
+}
+.projContLeft{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-self: flex-start;
+    flex-direction: column;
 }
 
 
@@ -123,15 +138,14 @@
 
 .aboutMe{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    flex-direction: row;
 
     margin: 10px;
 
 }
 
-.skills{
+#skills{
     margin: 20px;
 
     display: flex;
@@ -151,7 +165,7 @@
     margin: 0px;
 }
 
-.autobio{
+#autobio{
     margin: 20px;
 
     display: flex;
