feat: add the new .gif files to accompany the website along with other additional details about myself

--- a/styles.css
+++ b/styles.css
@@ -132,8 +132,7 @@
 
 .prevProjPhotosContent{
     margin: 10px;
-    height: 300px;
-    width: 300px;
+    flex-wrap: wrap;
 }
 
 .aboutMe{
@@ -193,5 +192,6 @@
 
 
 p{
+    font-family: 'Alliance';
     margin: 0px;
 }
