--- a/styles.css
+++ b/styles.css
@@ -17,27 +17,23 @@
     justify-content: space-between;
     align-items: center;
     background-color: #FFCF99;
-    /* position: sticky;
-    top: 0;
-    width: 100%;
-    z-index: 1000; */
-    /* margin: 10px; */
+    padding: 0px;
 }
 
 .navBarContent {
-    padding: 10px;
+    padding: 0px;
     display: flex;
 }
 
 .navBarContent a {
-    margin: 50px;
     transition: color 0.3s;
     text-decoration: none;
 
     font-size: 30px;
     font-family: 'Helserif';
     color: #111D4A;
-    margin: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 
     position: relative;
 
@@ -69,8 +65,9 @@
 }
 
 #logo{
-    width: 140px;
-    height: 140px;
+    width: 120px;
+    height: 120px;
+    object-fit: cover
 }
 
 .bodyContent{
@@ -95,6 +92,7 @@
     width: 400px;
     height: 400px;
     border-radius: 60%;
+    object-fit: cover
 }
 
 #prevProj{
@@ -114,25 +112,32 @@
     font-weight: lighter;
 }
 
-.projContRight{
+.projCont{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    align-self: flex-end;
-    flex-direction: column;
-}
-.projContLeft{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    align-self: flex-start;
-    flex-direction: column;
+    /* align-self: flex-end; */
+    flex-direction: row;
+
+    font-family: 'Alliance';
+    font-size: 25px;
+    margin-left: 130px;
+    margin-right: 130px;
 }
 
 
-.prevProjPhotosContent{
-    margin: 10px;
+
+.projPicRight{
+    display: flex;
     flex-wrap: wrap;
+    margin: 10px;
+    margin-left: 50px;
+}
+.projPicLeft{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    margin-right: 50px;
 }
 
 .aboutMe{
@@ -166,7 +171,6 @@
 
 #autobio{
     margin: 20px;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,9 +180,15 @@
 .autobioContent{
     display: flex;
     justify-content: center;
-    align-items: left;
     flex-direction: column;
+    font-family: 'Alliance';
+    font-size: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: center;
 }
+
+
 
 .footer{
     display: flex;
@@ -190,8 +200,6 @@
 
 }
 
-
 p{
-    font-family: 'Alliance';
     margin: 0px;
 }
