--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,33 @@
     src: url('fonts/AllianceNo1-Light.ttf') format('truetype');
 }
 
-.overallPage{
-    background-color: #FFF8F0
+html {
+    scroll-padding-top: 80px; 
 }
+
+.overallPage{
+    background-color: #FFF8F0;
+    background: linear-gradient(to bottom, #FFCF99, #FFF8F0);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
 
 #navBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #FFCF99;
+    background-color: #FFF8F0;
     padding: 0px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
+    z-index: 1000; 
 }
 
 .navBarContent {
@@ -29,9 +46,9 @@
     transition: color 0.3s;
     text-decoration: none;
 
-    font-size: 30px;
+    font-size: 20px;
     font-family: 'Helserif';
-    color: #111D4A;
+    color: #1E1E24;
     margin-left: 50px;
     margin-right: 50px;
 
@@ -65,13 +82,13 @@
 }
 
 #logo{
-    width: 120px;
-    height: 120px;
+    width: 60px;
+    height: 60px;
     object-fit: cover
 }
 
 .bodyContent{
-    
+    padding-top: 100px; /* Adjust this value based on the height of your nav bar */
 }
 
 #featPhotoContents{
@@ -80,26 +97,49 @@
     align-items: center;
     flex-direction: row;
 
+    margin: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.featPhotoTexts{
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+}
+.featPhotoTexts h1{
+    margin: 0px;
     font-family: 'Helserif';
-    color: #111D4A;
+    color: #1E1E24;
     font-size: 100px;
     font-weight: bold;
+}
 
-    margin: 10px;
+.featPhotoTexts p{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Alliance';
+    font-size: 20px;;
+    margin-right: 100px;
+    text-align: left;
 }
 
 .featPhoto{
     width: 400px;
     height: 400px;
     border-radius: 60%;
-    object-fit: cover
+    object-fit: cover;
 }
 
-#prevProj{
+.prevProj{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
 
     margin: 10px;
     /* padding: 10px; */
@@ -107,9 +147,9 @@
 
 .bodyTitles{
     font-family: 'Helserif';
-    color: #111D4A;
+    color: #1E1E24;
     font-size: 50px;
-    font-weight: lighter;
+    font-weight: bold;
 }
 
 .projCont{
@@ -132,12 +172,16 @@
     flex-wrap: wrap;
     margin: 10px;
     margin-left: 50px;
+
+    border-radius: 40px;
 }
 .projPicLeft{
     display: flex;
     flex-wrap: wrap;
     margin: 10px;
     margin-right: 50px;
+
+    border-radius: 40px;
 }
 
 .aboutMe{
@@ -149,7 +193,7 @@
 
 }
 
-#skills{
+.skills{
     margin: 20px;
 
     display: flex;
@@ -167,25 +211,6 @@
 
 .skillsList{
     margin: 0px;
-}
-
-#autobio{
-    margin: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.autobioContent{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-family: 'Alliance';
-    font-size: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
-    text-align: center;
 }
 
 
