--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ html {
 }
 
 .overallPage{
-    background-color: #FFF8F0;
-    background: linear-gradient(to bottom, #FFCF99, #FFF8F0);
+    padding-bottom: 60px;
+    background-color: #F0F8FF;
+    background: linear-gradient(to bottom, #CAE9F5, #F0F8FF);
 }
 
 * {
@@ -28,7 +29,7 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #FFF8F0;
+    background-color: #F0F8FF;
     padding: 0px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     position: fixed; 
@@ -49,11 +50,10 @@ html {
     font-size: 20px;
     font-family: 'Helserif';
     color: #1E1E24;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
 
     position: relative;
-
 }
 
 .navBarContent a:hover{
@@ -82,13 +82,19 @@ html {
 }
 
 #logo{
-    width: 60px;
-    height: 60px;
-    object-fit: cover
+    /* width: 30px;
+    height: 30px;
+    object-fit: cover */
+
+    margin: 5px;
+    margin-left: 10px;
+    width: auto;
+    height: 50px; 
+    object-fit: contain; 
 }
 
 .bodyContent{
-    padding-top: 100px; /* Adjust this value based on the height of your nav bar */
+    padding-top: 100px; 
 }
 
 #featPhotoContents{
@@ -98,7 +104,7 @@ html {
     flex-direction: row;
 
     margin: 10px;
-    margin-left: 100px;
+    margin-left: 200px;
     margin-right: 100px;
 }
 
@@ -112,7 +118,8 @@ html {
     font-family: 'Helserif';
     color: #1E1E24;
     font-size: 100px;
-    font-weight: bold;
+    font-weight: lighter;
+    text-align: center;
 }
 
 .featPhotoTexts p{
@@ -121,8 +128,8 @@ html {
     flex-direction: column;
     font-family: 'Alliance';
     font-size: 20px;;
-    margin-right: 100px;
-    text-align: left;
+    /* margin-right: 100px; */
+    text-align: center;
 }
 
 .featPhoto{
@@ -150,7 +157,7 @@ html {
     font-family: 'Helserif';
     color: #1E1E24;
     font-size: 50px;
-    font-weight: bold;
+    font-weight: lighter;
 }
 
 .projCont{
@@ -161,9 +168,9 @@ html {
     flex-direction: row;
 
     font-family: 'Alliance';
-    font-size: 25px;
-    margin-left: 130px;
-    margin-right: 130px;
+    font-size: 18px;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 
 
@@ -174,7 +181,10 @@ html {
     margin: 10px;
     margin-left: 50px;
 
-    border-radius: 40px;
+    border-radius: 20px;
+
+    width: auto;
+    height: 300px;
 }
 .projPicLeft{
     display: flex;
@@ -182,7 +192,10 @@ html {
     margin: 10px;
     margin-right: 50px;
 
-    border-radius: 40px;
+    border-radius: 20px;
+
+    width: auto;
+    height: 300px;
 }
 
 .aboutMe{
@@ -220,12 +233,77 @@ html {
 
 .footer{
     display: flex;
-    justify-content: left;
+    align-items: center;
+    flex-direction: column;
+
+    margin: 10px;
+    margin-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    border-top: 1px solid #ccc8c8;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom: 1px solid #ccc8c8;
+}
+
+.footerLogoContainer {
+    padding: 0px;
+    margin: 0px;
+}
+
+#footerLogo{
+    margin: 5px;
+    margin-left: 10px;
+    width: auto;
+    height: 100px; 
+    object-fit: contain; 
+}
+
+.wheretofindme{
+    font-family: 'Alliance';
+    font-size: 60px;
+}
+
+.totalContacts{
+    display: flex;
+    flex-direction: row;
+}
+
+.contacts{
+    display: flex;
     align-items: center;
     flex-direction: row;
 
-    margin: 10px;
+    margin: 15px;
 
+    font-family: 'alliance';
+    font-size: 18px;
+    color: #1E1E24;
+}
+
+.contacts a {
+    color: #1E1E24;
+    text-decoration: none;
+
+}
+
+.contactsPic{
+    margin: 5px;
+    margin-left: 10px;
+    width: auto;
+    height: 30px; 
+    object-fit: contain; 
+}
+
+.pageRights{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 60px;
+
+    font-family: 'helserif';
 }
 
 p{
