--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,6 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* align-self: flex-end; */
     flex-direction: row;
 
     font-family: 'Alliance';
@@ -175,27 +174,22 @@ html {
 
 
 
-.projPicRight{
+.projPicRight, .projPicLeft{
     display: flex;
     flex-wrap: wrap;
     margin: 10px;
-    margin-left: 50px;
 
     border-radius: 20px;
 
     width: auto;
     height: 300px;
 }
+
+.projPicRight{
+    margin-left: 50px;
+}
 .projPicLeft{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px;
     margin-right: 50px;
-
-    border-radius: 20px;
-
-    width: auto;
-    height: 300px;
 }
 
 .aboutMe{
